<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_movies"
        android:icon="@android:drawable/ic_menu_slideshow"
        android:title="@string/nav_movies" />
    <item
        android:id="@+id/nav_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/nav_search" />
    <item
        android:id="@+id/nav_watchlist"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/nav_watchlist" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/nav_profile" />
</menu>
